# CapApp

./: CMakeLists.txt  README.md  backend.cpp  backend.h  main.cpp  main.qml  serialportfactory.cpp  serialportfactory.h
